ci: update workflow to deploy MkDocs with permissions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,12 @@ on:
       - main
 
 permissions:
-  contents: write   # <-- this is the key!
+  contents: write   # allow GitHub Actions to push to gh-pages
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
