--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:   # <-- adds the "Run workflow" button in GitHub UI
 
 permissions:
   contents: write   # allow GitHub Actions to push to gh-pages
