--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,40 @@
-site_name: Islamify!
+site_name: Islamify
+site_url: https://islamify.github.io/
+
 theme:
   name: material
+  features:
+    - navigation.tabs
+    - navigation.top
+    - navigation.sections
+    - content.code.copy
+    - content.action.edit
+    - toc.integrate
+    - search.suggest
+    - search.highlight
+    - search.share
+    - navigation.instant
+
+  # Keep only two schemes so Material shows the built-in toggle.
+  # Placing slate first makes dark the default (Material uses the first palette entry
+  # when multiple palettes are provided). See notes below. :contentReference[oaicite:1]{index=1}
+  palette:
+    - scheme: slate
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
+    - scheme: default
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+
+extra_css:
+  - stylesheets/extra.css   # all appearance rules live here
+  - https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap
+
+nav:
+  - Home: index.md
+  - About: about.md
+  - Docs:
+      - Getting Started: docs/getting-started.md
+      - Features: docs/features.md
